**************
RECENT CHANGES
**************

======
1.70.0
======

* Support to add own files in dev:module:create command (by Christian Münch)
* Support to modify templates of dev:module:create command  (by Christian Münch)
* Added --add-time=prefix to db:dump command (by Alexander Menk)
* New command dev:class:lookup (by Rick Kuipers)

======
1.69.0
======

* New command dev:setup:script:attribute to generate attribute setup scripts (by Dusan Lukic, Alan Storm)
* db:dump --strip: Added enterprise tables (by Alexander Menk)
* config:get New --update-script option (by Alexander Menk)
* Fixed fatal error if /tmp/magento exists and magerun was started outside of Magento Root. (by Christian Münch)
* Script command: Ask for variable value (by Christian Münch)

======
1.68.1
======

* Fixed issue #143 - db:import error "sh: pv: not found"

======
1.68.0
======

* Issue #141 - Resolve variables inside of magerun calls in script
* Added new predefined variables to script command.

======
1.67.0
======

* Issue #135 - Feature Request: Config Seach (by @storm)

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------